--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>Rezyume</title>
     <body>
       <img
-        src="https://hips.hearstapps.com/hmg-prod/images/red-fresh-apple-isolated-on-white-background-royalty-free-image-1627314996.jpg?crop=1.00xw:0.923xh;0,0.0486xh&resize=980:*"
+        src="image.png"
         width="200"
       />
       <h1>
